--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        
+        <nav class="nav">
+            <h3 class="nav-title">Bangladesh 2.0</h3>
+            <button class="btn-nav">Sign in</button>
+        </nav>
+        <section class="banner">
+            
+            <div class="banner-container">
+                <div class="banner-items">
+                    <h5 class="banner-title">Bangladesh 2.0</h5>
+                    <h1 class="banner-sub-title">Idea , innovation ,
+                        vision and challenges in New Bangladesh.</h1>
+                        <button class="banner-btn">Explore New Bangladesh</button>
+                    </div>
+                    <img src="assets/hero.png" alt="">
+                </div>
+            </section>
     </header>
     <main>
+        <!-- Pillar section starts -->
 
     </main>
     <footer>
