--- a/index.html
+++ b/index.html
@@ -26,7 +26,35 @@
             </section>
     </header>
     <main>
-        <!-- Pillar section starts -->
+        <!-- vision section starts -->
+         <section class="Future-vision">
+            <div>
+            <h1 class="Future-vision-title">The Vision of Future</h1>
+            <p class="Future-vision-desc">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+            <div class="vision-container">
+            <div class="vision vision-bg1">
+                <img src="assets/card-icon.png" alt="">
+                <h3 class="vision-title">Digital Transformation</h3>
+                <p class="vision-desc">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                <button class="vision-btn1">Learn More</button>
+            </div>
+            <div class="vision vision-bg2">
+                <img src="assets/card-icon.png" alt="">
+                <h3 class="vision-title">Green Energy</h3>
+                <p class="vision-desc">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                <button class="vision-btn2">Learn More</button>
+            </div>
+            <div class="vision vision-bg3">
+                <img src="assets/card-icon.png" alt="">
+                <h3 class="vision-title">Modern Infrastructure</h3>
+                <p class="vision-desc">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                <button class="vision-btn3">Learn More</button>
+            </div>
+        </div>
+            
+        </section>
+        <!-- vision section ends -->
 
     </main>
     <footer>
