added Donate section with some styles

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <h1 class="donate-amount-3 donate-amount-bg">500 Taka</h1>
                     <h1 class="donate-amount-4 donate-amount-bg">1000 Taka</h1>
                 </div>
-                    <input type="number" placeholder="Other Amount (Taka)">
+                    <input class="donate-amount-other" type="number" placeholder="Other Amount (Taka)">
                 <br>
                     <button class="donate-btn">Done Now</button>
             </div>
